fixed iphone 5 spacing

--- a/2018/sass/main.scss
+++ b/2018/sass/main.scss
@@ -80,6 +80,11 @@ html, body {
         background-image: none;
     }
 
+    //iphone 5
+    @media screen and (width: 320px) and (height: 568px) {
+        margin-bottom: 100px;
+    }
+
     //iphone 6/7/8 Plus
     @media screen and (width: 414px) and (height: 736px) {
         margin-bottom: 100px;
@@ -88,11 +93,6 @@ html, body {
     //iphone 6/7/8
     @media screen and (width: 375px) and (height: 667px) {
         margin-bottom: 100px;
-    }
-
-    //iphone 5SE
-    @media screen and (width: 320px) and (height: 568px) {
-        margin-bottom: 0px;
     }
 
     //Pixel 2
